Move to using BoltDB

--- a/junebug.conf
+++ b/junebug.conf
@@ -1,9 +1,5 @@
-[directories]
-connections = /Users/nicp/nyaruka/gojunebug/data/connections/
-outbox = /Users/nicp/nyaruka/gojunebug/data/outbox/
-sent = /Users/nicp/nyaruka/gojunebug/data/sent/
-inbox = /Users/nicp/nyaruka/gojunebug/data/inbox/
-handled = /Users/nicp/nyaruka/gojunebug/data/handled/
+[db]
+filename = /Users/nicp/nyaruka/gojunebug/data/junebug.db
 
 [server]
 port = 8000
