Add twitter support, configurations on channels

--- a/junebug.conf
+++ b/junebug.conf
@@ -3,3 +3,8 @@ filename = /Users/nicp/nyaruka/gojunebug/data/junebug.db
 
 [server]
 port = 8000
+
+[twitter]
+consumer-key = "AA2fXybmg0qBwSEpZ7Mitgdxy"
+consumer-secret = "os8xXghC39AGfF9vuthufH3os9DjRmNbDRyhFzasjmcSboEviy"
+
